# dara

./: .env.example  .gitignore  README.md  app_example.yaml  pyproject.toml  requirements.txt
src/rest_api/: app.py
src/rest_api/jobs/: base.py
src/rest_api/jobs/index_file/: index_file.py
src/rest_api/routes/: __init__.py
src/rest_api/routes/v1/: __init__.py  endpoints.py
src/rest_api/services/: client.py  task_store.py
src/rest_api/services/task_store/: __init__.py  base.py  postgres_store.py  redis_store.py
src/rest_api/services/workflows/: __init__.py  executor.py  pipeline.py
src/rest_api/services/workflows/definitions/: __init__.py  upload_and_process_file.py
src/rest_api/services/workflows/steps/: __init__.py  monitor_job.py  run_job.py  upload_file.py
src/rest_api/utils/: __init__.py  env.py  spark.py
tests/: test_workflow_executor.py  test_workflow_pipeline.py
